# internal/routes/role_routes.go
@@ -13,5 +13,11 @@ func SetupRoleRoutes(app *fiber.App, db *gorm.DB) {
 	repo := repository.NewRoleRepository(db)
 	hdl := handler.NewRoleHandler(repo)
 
-	app.Get("/api/admin/roles", middleware.Auth, middleware.Role("Admin"), hdl.GetAll)
+	api := app.Group("/api/admin/roles", middleware.Auth, middleware.Role("Admin"))
+	api.Get("/", hdl.GetAll)
+	api.Get("/permissions", hdl.GetAllPermissions) // List semua permission yang tersedia
+	api.Get("/:id", hdl.GetDetail)
+	api.Post("/", hdl.Create)
+	api.Put("/:id", hdl.Update)
+	api.Delete("/:id", hdl.Delete)
 }
